# DAO_lim

./: .gitignore  Cargo.toml  LIEBERMAN_ANALYSIS.md  README.md
certs/: .gitignore  README.md  generate-dev-certs.sh
configs/: dao.toml
crates/dao/: Cargo.toml
crates/dao-admin/: Cargo.toml
crates/dao-admin/src/: lib.rs  reload.rs
crates/dao-core/: Cargo.toml
crates/dao-core/src/: config.rs  error.rs  lib.rs  upstream.rs
crates/dao-core/src/align/: mod.rs  policy.rs  selector.rs
crates/dao-core/src/flow/: filters.rs  mod.rs
crates/dao-core/src/gate/: listener.rs  mod.rs
crates/dao-core/src/liminal/: adaptive.rs  consciousness.rs  echo.rs  metamorphic.rs  mod.rs  orchestrator.rs  presence.rs  quantum.rs  ritual.rs  shadow.rs  temporal.rs  zones.rs
crates/dao-core/src/memory/: mod.rs  profile.rs  snapshot.rs
crates/dao-core/src/sense/: metrics.rs  mod.rs
crates/dao-core/src/upstream/: client.rs  mod.rs  pool.rs  state.rs
crates/dao-filters/: Cargo.toml
crates/dao-filters/src/: abi.rs  lib.rs  runtime.rs
crates/dao-telemetry/: Cargo.toml
crates/dao-telemetry/src/: exporter.rs  lib.rs  metrics.rs
crates/dao/src/: main.rs  server.rs
docs/: PHILOSOPHY.md  ROADMAP_CONSCIOUSNESS.md
