[workspace]
members = [
    "crates/dao",
    "crates/dao-core",
    "crates/dao-filters",
    "crates/dao-telemetry",
    "crates/dao-admin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DAO_lim Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/safal207/DAO_lim"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# HTTP/networking
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }

# WebSocket
tokio-tungstenite = "0.24"
tungstenite = "0.24"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2.2"

# HTTP/2 & HTTP/3 (future)
h2 = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Metrics & telemetry
prometheus = "0.13"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# WASM runtime
wasmtime = "26.0"
wasmtime-wasi = "26.0"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
pin-project = "1.1"
bytes = "1.8"
http = "1.1"
http-body-util = "0.1"

# Config watching
notify = "7.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Time & stats
chrono = "0.4"
hdrhistogram = "7.5"

# Async primitives
async-trait = "0.1"
dashmap = "6.1"
parking_lot = "0.12"

# Random
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
