[package]
name = "dao-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
h2 = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
pin-project = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }

async-trait = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
hdrhistogram = { workspace = true }
rand = { workspace = true }

num_cpus = "1.16"

[dev-dependencies]
tokio-test = "0.4"
