[package]
name = "dao-filters"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

dao-core = { path = "../dao-core" }
